# Matchup_chatbot

./: .gitignore  README.md  render.yaml
.github/workflows/: ci.yml
lol-mcp-server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
lol-mcp-server/src/lol_mcp_server/: __init__.py  auth.py  config.py  data_dragon.py  formatting.py  logging_setup.py  riot_api.py  server.py
web-client/: .env.local.example  README.md  next.config.mjs  package-lock.json  package.json
web-client/app/: globals.css  layout.tsx  page.tsx
web-client/app/api/chat/: route.ts
web-client/app/api/health/: route.ts
web-client/app/api/warm/: route.ts
web-client/components/: MatchCard.tsx
web-client/evals/: README.md  eval-set.json  results.json  run.mjs
web-client/lib/: ddragon.ts  mcp.ts
web-client/scripts/: capture-card.mjs  capture.mjs
