[project]
name = "lol-mcp-server"
version = "0.1.0"
description = "MCP server exposing League of Legends data (Riot API + Data Dragon) as tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.3.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
lol-mcp-server = "lol_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lol_mcp_server"]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
]
